@@ -3,6 +3,7 @@ Version 6.0.1
   to enable serializing std::optional<time_point>.
 - Added option to timeout JWT access tokens
 - handle_file of template-processor now uses chunked transfer encoding
+- Avoid crash when loading a non-regular file
 
 Version 6.0.0
 - Dropped boost::date_time and other boost libraries
